[package]
name = "rust_learn_two"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4",features = ["macros"] }
tokio = {version = "1.47.0",features = ["full"]}
tracing = {version = "0.1.41",features = ["async-await"]}
tracing-subscriber = {version = "0.3.20",features = ["chrono","env-filter"]}